# ftmq-search

./: .bumpversion.cfg  .gitignore  Makefile  pyproject.toml  requirements.txt
.github/workflows/: docker.yml  python.yml
ftmq_search/: cli.py  model.py  settings.py  worker.py
ftmq_search/store/: __init__.py  base.py  sqlite.py  tantivy.py
ftmq_search/store/elastic/: mapping.py  query.py  store.py
tests/: conftest.py  test_store.py  test_transform.py
